k8s/manifests/base-services/services-gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: tailscale-services
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: tailscale-services
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: services
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-prod
spec:
  gatewayClassName: tailscale-services
  listeners:
    - name: main
      hostname: "*.${services_hostname_suffix}"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.infra.services/allow-routes: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: services-tls-gateway
    - name: syncthing
      # Syncthing doesn't set SNI :(
      # hostname: "syncthing.${services_hostname_suffix}"
      protocol: TLS
      tls:
        mode: Passthrough
      port: 22000
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: syncthing
    - name: sshfs
      hostname: "*.sshfs.${services_hostname_suffix}"
      protocol: TLS
      port: 22
      tls:
        mode: Terminate
        certificateRefs:
          - name: services-sshfs-tls-gateway
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: sshfs
